@@ -5,7 +5,8 @@ Started as a simple JavaFX test project, but is actually useful as a small and s
 ![screenshot](ivy-log-viewer-screenshot.png)
 
 ## Requirements
-* Java 8 with JavaFX (on Linux you need to install `openjfx` in addition to the JDK).
+* Java 11 with JavaFX SDK installed (on Linux you need to install `openjfx` in addition to the JDK).
+ * Set an environment variable **$JAVA_FX_HOME** pointing to the JavaFX SDK.
 * Maven 3 and later for building.
 
 ## Installation
@@ -16,4 +17,4 @@ Get a built IvyLogViewer from [releases](https://github.com/ivy-supplements/ivy-
 
 ## Run
     cd target/
-    java -jar ivy-log-viewer-X.Y.Z-SNAPSHOT.jar
+    java --module-path $JAVA_FX_HOME/lib --add-modules javafx.controls,javafx.fxml -jar ivy-log-viewer-X.Y.Z-SNAPSHOT.jar
